testing & fixing layout on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
 }
 
 .slogan {
-  padding-top: 12rem;
+  padding-top: 8rem;
   text-align: center;
 }
 
